name:                rank2classes
version:             0.2.1.1
synopsis:            a mirror image of some standard type classes, with methods of rank 2 types
description:
  A mirror image of the standard constructor type class hierarchy rooted in 'Functor', except with methods of rank 2
  types and class instances of kind @(*->*)->*@. The classes enable generic handling of heterogenously typed data
  structures and other neat tricks.

homepage:            https://github.com/blamario/grampa/tree/master/rank2classes
bug-reports:         https://github.com/blamario/grampa/issues
license:             BSD3
license-file:        LICENSE
author:              Mario Blažević
maintainer:          Mario Blažević <blamario@protonmail.com>
copyright:           (c) 2017 Mario Blažević
category:            Control, Data, Generics
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10
extra-source-files:  README.md
source-repository head
  type:              git
  location:          https://github.com/blamario/grampa

library
  hs-source-dirs:      src
  exposed-modules:     Rank2, Rank2.TH
  default-language:    Haskell2010
  -- other-modules:
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <5,
                       template-haskell >= 2.11 && < 2.13,
                       transformers >= 0.5 && < 0.6
  -- hs-source-dirs:      
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  main-is:             Doctest.hs
  ghc-options:         -threaded -pgmL markdown-unlit
  build-depends:       base, rank2classes, doctest >= 0.8
